<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#03738B"
    android:orientation="vertical"
    tools:context=".menu.HalamanSaran"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="62dp">


    <TextView
        android:id="@+id/txtNama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="6dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/nama_pemberi_saran"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/etNama"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/etNama"
        android:layout_marginStart="16dp"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints="nama"
        android:background="@drawable/kustom"
        android:ems="13"
        android:hint="@string/masukan_nama_anda"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/txtKelas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/kelas"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/txtNama" />

    <EditText
        android:id="@+id/etKelas"
        android:layout_width="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints="kelas"
        android:background="@drawable/kustom"
        android:ems="13"
        android:hint="@string/masukan_kelas"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNama" />

    <TextView
        android:id="@+id/txtSekolah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/asal_sekolah"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/txtKelas" />

    <EditText
        android:id="@+id/etSekolah"
        android:layout_width="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints="asal sekolah"
        android:background="@drawable/kustom"
        android:ems="13"
        android:hint="@string/masukan_asal_sekolah"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etKelas" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/saran_materi"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/txtSekolah" />

    <EditText
        android:id="@+id/etMateri"
        android:layout_width="350dp"
        android:layout_height="177dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:autofillHints="saran"
        android:background="@drawable/kustom"
        android:ems="15"
        android:hint="@string/masukan_saran"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />



    <Button
        android:id="@+id/btnKirim"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="20dp"
        android:padding="24dp"
        android:backgroundTint="#084567"
        android:textColor="@color/white"
        android:text="@string/kirim"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent" />


</LinearLayout>