<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<!--    <item-->
<!--        android:id="@+id/nav_about"-->
<!--        android:title="@string/about"-->
<!--        android:icon="@drawable/icon_info"-->
<!--        app:showAsAction="ifRoom" />-->

    <item
        android:id="@+id/nav_tambah_saran"
        android:title="@string/tambah_saran_materi"
        android:icon="@drawable/ic_baseline_post_add_24"
        app:showAsAction="ifRoom" />
<!--    <item-->
<!--        android:id="@+id/nav_profile"-->
<!--        android:title="Profile"-->
<!--        android:icon="@drawable/ic_baseline_post_add_24"-->
<!--        app:showAsAction="never" />-->
    <item
        android:id="@+id/nav_Keluar"
        android:title="Logout"
        android:icon="@drawable/ic_baseline_post_add_24"
        app:showAsAction="never" />



<!--    <item-->
<!--        android:id="@+id/nav_info"-->
<!--        android:title="About"-->
<!--        app:showAsAction="never" />-->



</menu>