...
    <string name="_1_sub_1">1. Sub 1</string>
    <string name="penjelasan">Penjelasan</string>
    <string name="contoh">Contoh</string>
    <string name="textview">TextView</string>
    <string name="search">Search</string>
    <string name="about">About</string>
    <string name="tambah_saran_materi">Tambah Saran Materi</string>
    <string name="materi_kelas_4">Materi Kelas 4</string>
    <string name="bilangan_pecahan">Bilangan Pecahan</string>
    <string name="bentuk_pecahan">Bentuk Pecahan</string>
    <string name="faktor_dan_kelipatan_bilangan">Faktor dan Kelipatan Bilangan</string>
    <string name="menentukan_kpk_dan_fpb">Menentukan Kpk dan Fpb</string>
    <string name="penerapan_kpk_fpb">Penerapan Kpk Fpb</string>
...
